--- a/data/app/templates/editor.html
+++ b/data/app/templates/editor.html
@@ -65,6 +65,6 @@
                 {% endfor %}
             </table>
         </div>
-        <button onclick="location.href='/dashboard/edit/action/{{path}}'">Choose this location</button>
+        <button onclick="location.href='/{{user}}/dashboard/edit/action/{{path}}'">Choose this location</button>
     </body>
 </html>
